--- a/web/app/themes/platformlondon/styles/query-loop.css
+++ b/web/app/themes/platformlondon/styles/query-loop.css
@@ -17,7 +17,7 @@
 }
 
 .wp-block-post-excerpt .wp-block-post-excerpt__excerpt {
-    @apply mb-0;
+    @apply mb-0 !text-base;
 }
 
 .yellow-drop-shadow {
